// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.TBody allowTags 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkGrammar 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkGrammar 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkGrammar 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkGrammar 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkHighlight 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkHighlight 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkHighlight 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkHighlight 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkSpaces 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkSpaces 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkSpaces 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkSpaces 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody className 1`] = `
<tbody
  className="uu5-bricks-table-tbody my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 1`] = `
<tbody
  className="color-schema-default uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 2`] = `
<tbody
  className="color-schema-red uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 3`] = `
<tbody
  className="color-schema-red uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 4`] = `
<tbody
  className="color-schema-red-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 5`] = `
<tbody
  className="color-schema-red-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 6`] = `
<tbody
  className="color-schema-green uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 7`] = `
<tbody
  className="color-schema-green uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 8`] = `
<tbody
  className="color-schema-green-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 9`] = `
<tbody
  className="color-schema-green-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 10`] = `
<tbody
  className="color-schema-yellow uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 11`] = `
<tbody
  className="color-schema-yellow uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 12`] = `
<tbody
  className="color-schema-yellow-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 13`] = `
<tbody
  className="color-schema-yellow-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 14`] = `
<tbody
  className="color-schema-purple uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 15`] = `
<tbody
  className="color-schema-purple uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 16`] = `
<tbody
  className="color-schema-purple-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 17`] = `
<tbody
  className="color-schema-purple-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 18`] = `
<tbody
  className="color-schema-brown uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 19`] = `
<tbody
  className="color-schema-brown uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 20`] = `
<tbody
  className="color-schema-brown-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 21`] = `
<tbody
  className="color-schema-brown-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 22`] = `
<tbody
  className="color-schema-orange uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 23`] = `
<tbody
  className="color-schema-orange uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 24`] = `
<tbody
  className="color-schema-orange-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 25`] = `
<tbody
  className="color-schema-orange-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 26`] = `
<tbody
  className="color-schema-cyan uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 27`] = `
<tbody
  className="color-schema-cyan uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 28`] = `
<tbody
  className="color-schema-cyan-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 29`] = `
<tbody
  className="color-schema-cyan-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 30`] = `
<tbody
  className="color-schema-grey uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 31`] = `
<tbody
  className="color-schema-grey uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 32`] = `
<tbody
  className="color-schema-grey-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 33`] = `
<tbody
  className="color-schema-grey-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 34`] = `
<tbody
  className="color-schema-pink uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 35`] = `
<tbody
  className="color-schema-pink uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 36`] = `
<tbody
  className="color-schema-pink-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 37`] = `
<tbody
  className="color-schema-pink-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema 38`] = `
<tbody
  className="color-schema-pink uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody content 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody content 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody content 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody content 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody controlled 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody controlled 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody controlled 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody controlled 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody default props 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody disabled 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tbody>
`;

exports[`UU5.Bricks.Table.TBody disabled 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody disabled 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody disabled 4`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tbody>
`;

exports[`UU5.Bricks.Table.TBody docKit examples UU5.Bricks.Table.TBody should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-table"
    id="uuID2"
    style={Object {}}
    title={null}
  >
    <table
      className="uu5-bricks-table-table"
    >
      <tbody
        className="color-schema-blue uu5-bricks-table-tbody"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Rimmer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            2nd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            comical
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Dave Lister
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            3rd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            zero
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Kristine Kochanski
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            1st console officer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            high
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`UU5.Bricks.Table.TBody dynamic 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody dynamic 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody dynamic 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody dynamic 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody hidden 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody hidden 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody hidden 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody hidden 4`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody id 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody ignoreHTML 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody ignoreHTML 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody ignoreHTML 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody ignoreHTML 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody mainAttrs 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody name 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 5`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 6`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 7`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 8`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 9`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 10`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 11`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 12`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 13`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 14`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 15`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 16`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 17`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 18`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Table.TBody nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Table.TBody noIndex 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody noIndex 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody noIndex 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody noIndex 4`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody props.allowTags - example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Table"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-header"
    ignoreInnerHTML={false}
    key="uuID1-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-tbody
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      className={null}
      colorSchema="blue"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID2"
      ignoreInnerHTML={false}
      key="uuID2"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID3"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rimmer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID4"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="2nd class technician"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID5"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="comical"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID6"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID7"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <MyAllowTagsComponents
          className={null}
          content="AllowTags Content"
          id="allowID"
          mainAttrs={null}
          name={null}
          noIndex={false}
          ref_={null}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tbody>
  </table>
  <Footer
    className={null}
    content="Table footer"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-footer"
    ignoreInnerHTML={false}
    key="uuID1-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Table.TBody pureRender 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody pureRender 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody pureRender 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody pureRender 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody selected 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody selected 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody selected 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody selected 4`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody style 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody style 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody style 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody style 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody textCorrector 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody textCorrector 2`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody textCorrector 3`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody textCorrector 4`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody tooltip 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
